k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ardent-leads-api
  namespace: default
  labels:
    app: ardent-leads-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: ardent-leads-api
